--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,23 +1,26 @@
+body {
+   color: #333333;
+   font-family: "Montserrat", sans-serif;
+   font-optical-sizing: auto;
+   font-weight: 400;
+   font-style: normal;
+   font-size: 15px;
+}
 
+h1 {
+   background-image: url(../img/sobre-background.jpg);
+}
 
- body {
-    color:#333333;
-    font-family: "Lucida Sans Unicode","Lucida Grande",sans-serif;
- }
+h2 {
+   border-bottom: 2px groove #333333;
+}
 
- h1 {background-image: url(../img/sobre-background.jpg);
- }
+figure {
+   background-color: #F2EDED;
+   border: 1px solid #ccc;
+   text-align: center;
+}
 
- h2{
-    border-bottom: 2px groove #333333;
- }
-
- figure {
-    background-color: #F2EDED;
-    border: 1px solid #ccc;
-    text-align: center;
- }
-
- figcaption {
-    font-style: italic;
- }
+figcaption {
+   font-style: italic;
+}
