--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,5 +1,12 @@
+
+:root{
+   --cor-base: #333;
+   --cor-fundo-img:#f2eded;
+   --cor-borda-img: #ccc;
+  
+}
 body {
-   color: #333333;
+   color: var(--cor-base);
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
@@ -12,12 +19,12 @@ h1 {
 }
 
 h2 {
-   border-bottom: 2px groove #333333;
+   border-bottom: 2px groove var(--cor-base);
 }
 
 figure {
-   background-color: #F2EDED;
-   border: 1px solid #ccc;
+   background-color: var(--cor-fundo-img);
+   border: 1px solid var(--cor-borda-img);
    text-align: center;
 }
 
