--- a/css/sobre.css
+++ b/css/sobre.css
@@ -12,22 +12,37 @@ body {
    font-weight: 400;
    font-style: normal;
    font-size: 15px;
+   margin-left: auto;
+   margin-right: auto;
+   width: 940px;
 }
 
 h1 {
    background-image: url(../img/sobre-background.jpg);
+   padding: 10px;
 }
 
 h2 {
    border-bottom: 2px groove var(--cor-base);
+   margin-top: 30px;
 }
 
 figure {
    background-color: var(--cor-fundo-img);
    border: 1px solid var(--cor-borda-img);
    text-align: center;
+   padding: 15px;
+   margin: 30px;
 }
 
 figcaption {
    font-style: italic;
+   margin-top: 10px;
+}
+
+p{
+   padding: 0 45px;
+   text-indent: 15px;
+   text-align: justify;
+
 }
