--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,27 @@
-:root{
-    --cor-primaria: #2a2633;
-    --cor-secundaria:#5e30c9;
-    --cor-destaque: #0e50ca;
-    --cor-fundo-destaque:#e9f0ea;
+div{
+    width: 100px;
+    height: 100px;
+    border: 1px solid #000;
+    margin-bottom: 5px;
 }
 
-h1{
-    color: var(--cor-primaria);
+.amarelo{
+    background-color: yellow;
 }
 
-h2{
-    color: var(--cor-secundaria);
+.vermelho{
+    background-color: red;
 }
 
-p{
-    color:var(--cor-destaque);
-    background-color: var(--cor-fundo-destaque);
+.azul{
+    background-color: blue;
+
+}
+
+.verde{
+    background-color: green;
+}
+
+.fonte-clara{
+    color: white;
 }
