--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,30 @@
-:root{
+:root {
 
     --cor-base: #333;
     --cor-menu: #003366;
 }
 
-.sacola{
+.sacola {
 
-    background: url(../img/sacola.png) no-repeat repeat top right;
+    background: url(../img/sacola.png) no-repeat top right;
     font-size: 14px;
     padding-right: 35px;
+    padding-top: 8px;
     text-align: right;
     width: 140px;
+
 
 }
 
 .menu-opcoes ul {
     font-size: 15px;
+}
+
+
+.menu-opcoes ul li {
+    display: inline;
+    margin-left: 20px;
+   
 }
 
 
@@ -25,6 +34,12 @@
 }
 
 body {
-    color:var(--cor-base);
+    color: var(--cor-base);
     font-family: "Montserrat", sans-serif;
+}
+
+.container {
+    margin: 0 auto;
+    width: 90%;
+
 }
