--- a/css/sobre.css
+++ b/css/sobre.css
@@ -12,10 +12,7 @@ body {
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
-   font-size: 15px;
-   margin-left: auto;
-   margin-right: auto;
-   width: 940px;
+  
 }
 
 h1 {
@@ -59,13 +56,13 @@ p{
    width: 550px;
 }
 
-#rodape{
+.rodape{
    color: var(--cor-rodape);
    margin: 30px 0;
    padding: 30px 0;
 }
 
-#rodape img{
+.rodape img{
    margin-right: 30px;
    vertical-align: middle;
    width: 94px;
@@ -74,4 +71,10 @@ p{
 #familia-pelho{
    float: right;
    margin: 0 0 10px 10px;
+}
+
+.container {
+   margin: 0 auto;
+   width: 90%;
+
 }
