--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,3 +117,57 @@ header {
 .destaque {
     margin-top: 10px;
 }
+
+.painel {
+    margin: 10px 0;
+    padding: 10px;
+    width: 445px;
+}
+
+.novidades{
+    float: left;
+
+}
+
+.mais-vendidos {
+    float:right
+}
+
+
+.painel h2 {
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+
+}
+
+
+.painel a {
+    color: var(--cor-base);
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+
+}
+
+.novidades {
+    background-color: #f5dcdc;
+
+}
+
+.mais-vendidos {
+    background-color: #dcdcf5;
+
+}
+
+
+
+.painel li { 
+    display: inline-block;
+    vertical-align: top;
+    width: 25%;
+    margin: 2px;
+    padding-bottom: 10px;
+
+}
