--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,9 @@
     --cor-menu: #003366;
     --cor-menu-lateral: #dcdcdc;
     --cor-menu-lateral-itens: #ffff;
+    --cor-painel-novidades: #f5dcdc;
+    --cor-painel-mais-vendidos: #dcdcf5;
+
 }
 
 .sacola {
@@ -55,7 +58,7 @@ body {
 
 .container {
     margin: 0 auto;
-    width: 90%;
+    width: 940px;
 
 }
 
@@ -152,12 +155,12 @@ header {
 }
 
 .novidades {
-    background-color: #f5dcdc;
+    background-color: var(--cor-painel-novidades);
 
 }
 
 .mais-vendidos {
-    background-color: #dcdcf5;
+    background-color:var(--cor-painel-mais-vendidos);
 
 }
 
@@ -166,7 +169,7 @@ header {
 .painel li { 
     display: inline-block;
     vertical-align: top;
-    width: 25%;
+    width: 130px;
     margin: 2px;
     padding-bottom: 10px;
 
