--- a/css/estilos.css
+++ b/css/estilos.css
@@ -103,11 +103,11 @@ header {
 
 }
 
-.busca input [type=search]{
+.busca input [type=search] {
     width: 170px;
 
 }
-    
+
 
 
 .menu-departamentos {
@@ -127,13 +127,13 @@ header {
     width: 445px;
 }
 
-.novidades{
+.novidades {
     float: left;
 
 }
 
 .mais-vendidos {
-    float:right
+    float: right
 }
 
 
@@ -160,17 +160,68 @@ header {
 }
 
 .mais-vendidos {
-    background-color:var(--cor-painel-mais-vendidos);
+    background-color: var(--cor-painel-mais-vendidos);
 
 }
 
 
 
-.painel li { 
+.painel li {
     display: inline-block;
     vertical-align: top;
     width: 130px;
     margin: 2px;
     padding-bottom: 10px;
+}
+
+
+.social a {
+    height: 32px;
+    width: 32px;
+    display: block;
+    text-indent: -9999px;
+}
+
+.social a[href*="facebook.com"] {
+    background-image: url(../img/facebook.png);
 
 }
+
+.social a[href*="twitter.com"] {
+    background-image: url(../img/twitter.png);
+
+}
+
+.social a[href*="plus.google.com"] {
+    background-image: url(../img/googleplus.png);
+
+}
+
+footer {
+    background-image: url(../img/fundo-rodape.png);
+    clear: both;
+    padding: 20px 0;
+    position: relative;
+}
+
+
+
+.social {
+    position: absolute;
+    top: 12px;
+    right: 0;
+
+}
+
+.social li {
+
+    float: left;
+    margin-left: 25px;
+
+}
+
+
+
+
+
+
