--- a/css/sobre.css
+++ b/css/sobre.css
@@ -79,3 +79,19 @@ p{
    width: 85%;
 
 }
+
+p:first-letter { 
+   font-weight: bold;
+
+}
+
+h1 + p {
+   text-indent: 0;
+}
+
+
+p::first-line {
+  
+   font-variant: small-caps;
+
+ }
