--- a/css/estilos.css
+++ b/css/estilos.css
@@ -220,7 +220,29 @@ footer {
 
 }
 
+.menu-opcoes a:hover {
+    color: #007dc6;
+}
 
+.menu-opcoes a:active {
+    color: red;
+}
+
+.menu-departamentos li ul {
+    display: none;
+}
+
+.menu-departamentos li:hover ul {
+    display: block;
+}
+
+.menu-departamentos ul ul li {
+    background-color: #dcdcdc;
+}
+
+.menu-departamentos li li a::before{
+    content: '-';
+}
 
 
 
